# rust_exam

./: Cargo.toml  readme.md
src/: main.rs  mandelbrot.rs  util.rs
