[package]
name = "final_exercice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
colorgrad = "0.6.2"
image = "0.25.0"
show-image = {version = "0.13.1", features = ["image"]}
text_io = "0.1.12"
